# Dorc

./: .gitignore  .gitlabels  AGENTS.md  ANALYZER-NEEDS.md  DESIGN.md  IMPLEMENTATION.md  KNOBS.md  README.md  STALENESS-AUDIT.md  TODO-ADDTL.md  TODO.md  hk.pkl  mise.toml
spike/: CLAUDE.md  Cargo.toml  _typos.toml  clippy.toml  deny.toml  mkmocks.sh
spike/crates/analysis/: CLAUDE.md  Cargo.toml
spike/crates/analysis/src/: cfg.rs  effect.rs  lattice.rs  lib.rs  solve.rs  value.rs
spike/crates/analysis/tests/: cfg.rs
spike/crates/cli/: CLAUDE.md  Cargo.toml
spike/crates/cli/src/: main.rs
spike/crates/core/: CLAUDE.md
spike/crates/core/src/: diag.rs  lib.rs  prov.rs  unord.rs
spike/crates/core/tests/: diag_tidy.rs
spike/crates/coverage/: Cargo.toml  README.md
spike/crates/coverage/src/: lib.rs  main.rs  weights.rs
spike/crates/hostsim/: CLAUDE.md  Cargo.toml
spike/crates/hostsim/examples/: differential.rs
spike/crates/hostsim/src/: differential.rs  lib.rs
spike/crates/oracle/: CLAUDE.md  Cargo.toml
spike/crates/oracle/src/: check.rs  lib.rs
spike/crates/oracle/tests/: check.rs
spike/crates/plan/: CLAUDE.md  Cargo.toml
spike/crates/plan/src/: erasability.rs  fold.rs  lib.rs  render.rs
spike/crates/plan/tests/: erasability.rs  observable_matrix.rs
spike/crates/syntax/: CLAUDE.md  Cargo.toml
spike/crates/syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  sem.rs
spike/crates/syntax/tests/: parse.rs
spike/e2e/: norm_parity.awk  run.sh  scan_redirects.awk
spike/e2e/cases/andor-rc-undeclared-runs/: PROBE_RESULTS=authored  book.sh  expected.out  expected.ran  probe-results.txt  user.oracle.sh
spike/e2e/cases/andor-rc-vouch-wrong/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/background-amp-runs/: book.sh  expected-diagnostics  expected.out
spike/e2e/cases/consumed-output/: expected.out
spike/e2e/cases/converged/: expected.out  probe-results.txt
spike/e2e/cases/diverged/: expected.out  probe-results.txt
spike/e2e/cases/door1-and-form/: EXIT_RC=1  book.sh  expected.out  probe-results.txt
spike/e2e/cases/door1-and-form-runs/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/door1-cascade-block-elides/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/door1-cascade-diverged-runs/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/door1-cascade-multistatement/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/door1-door3-dead-block-folds/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/door1-door3-inner-elides/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/door1-door3-inner-runs/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/door1-guard-below-mutators-invalid/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/door3-and-true-blocks/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/door3-or-handler-blocks/: book.sh  expected.out  package.oracle.sh  probe-results.txt
spike/e2e/cases/door3-or-true-diverged-runs/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/door3-or-true-elides/: XFAIL  book.sh  expected.out  probe-results.txt
spike/e2e/cases/enclosing-group-redir/: book.sh  expected.out
spike/e2e/cases/exec-consumed-stdout/: PROBE_RESULTS=authored  RAN_ORDER=lax  expected.out
spike/e2e/cases/exec-converged/: expected.out
spike/e2e/cases/exec-detached-fn/: expected.out  probe-results.txt
spike/e2e/cases/exec-devnull-exempt/: book.sh  expected.out
spike/e2e/cases/exec-distinct-selectors/: expected.out  probe-results.txt  service.oracle.sh
spike/e2e/cases/exec-diverged/: expected.out
spike/e2e/cases/exec-dollarq-blocks-elision/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/exec-enabled-not-active-host/: book.sh  expected.out  expected.ran  probe-results.txt  service.oracle.sh
spike/e2e/cases/exec-enclosing-pipe-subshell/: RAN_ORDER=lax  expected.out
spike/e2e/cases/exec-errexit-elide-vouched/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/exec-errexit-top-status-runs/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/exec-literal-unset-pure/: expected.out
spike/e2e/cases/exec-multi-entity/: expected.out  probe-results.txt
spike/e2e/cases/exec-multileaf-line-mixed/: expected.out
spike/e2e/cases/exec-opaque-neighbour/: expected.out  expected.ran  probe-results.txt
spike/e2e/cases/exec-opaque-var/: book.sh  expected.out
spike/e2e/cases/exec-opaque-var-runs/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/exec-poison-wall-dead/: PROBE_RESULTS=authored  expected.out
spike/e2e/cases/exec-pure-builtin/: expected.out
spike/e2e/cases/exec-query-after-mutator-runs/: book.sh  expected.out  probe-results.txt  tool.oracle.sh
spike/e2e/cases/exec-query-guard-composition/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/exec-resolved-var-elides/: expected.out  probe-results.txt
spike/e2e/cases/exec-same-cell-kill/: expected.out  expected.ran
spike/e2e/cases/exec-shimmed-query-fold/: book.sh  expected.out  pkgstate.oracle.sh  probe-results.txt
spike/e2e/cases/exec-singleton-update/: PROBE_RESULTS=authored  expected.out
spike/e2e/cases/exec-subshell-establish/: expected.out
spike/e2e/cases/exec-subst-body-nonleaf/: expected.out
spike/e2e/cases/exec-top-arith-in-arg-ok/: book.sh  expected.out
spike/e2e/cases/fi-shared-line/: book.sh  expected.out  probe-results.txt
spike/e2e/cases/fold-oror-guard-omits/: PROBE_RESULTS=authored  book.sh  expected.out  probe-results.txt  tool.oracle.sh
spike/e2e/cases/garbage-stdin/: probe-results.txt
spike/e2e/cases/glob-for-word-runs/: book.sh  expected.out  expected.ran  probe-results.txt
spike/e2e/cases/guard-elision-wrong/: XFAIL
spike/e2e/cases/guard-status-blocks-elision/: book.sh  expected.out  probe-results.txt  tool.oracle.sh
spike/e2e/cases/guarded/: expected.out
spike/e2e/cases/no-oracle/: expected.out  (+1 more)
spike/fixtures/: package.oracle.sh  pi-webhost.book.sh
spike/tools/: coverage.sh
(+749 files in other folders)
