[package]
name = "dorc-analysis"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# The static-analysis engine: a generic monotone-dataflow framework (pure,
# deterministic — `inv-determinism`) plus the sh-specific CFG/effect analyses.
[dependencies]
dorc-core = { path = "../core" }

[lints]
workspace = true
