[package]
name = "dorc-analysis"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# The static-analysis engine: a generic monotone-dataflow framework (pure,
# deterministic — `inv-determinism`) plus the sh-specific CFG/effect analyses.
[dependencies]
dorc-core = { path = "../core" }
# The CFG builder consumes the parser's arena AST (`cfg::build(ast: &Ast)`), so
# syntax is a real dependency, not dev-only.
dorc-syntax = { path = "../syntax" }

[lints]
workspace = true
