[package]
name = "dorc-coverage"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# arch-6 (round-21): the analyzer-coverage dashboard. Consumes the other crates as
# LIBRARIES (it never re-implements engine logic) and reports, per command-site,
# what the engine made of it — analyzable / oracled / probed / elided-through-which-
# door. A measuring instrument, not part of the kernel; the I/O edge (it reads files
# and prints a table) lives here, the analysis it drives stays pure.
[[bin]]
name = "dorc-coverage"
path = "src/main.rs"

[dependencies]
dorc-core = { path = "../core", version = "0.0.0" }
dorc-syntax = { path = "../syntax", version = "0.0.0" }
dorc-analysis = { path = "../analysis", version = "0.0.0" }
dorc-oracle = { path = "../oracle", version = "0.0.0" }
dorc-plan = { path = "../plan", version = "0.0.0" }

[lints]
workspace = true
