[package]
name = "dorc-hostsim"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# The DST host model — the test substrate (notes 162 §4 / 163 §4). It depends on
# the kernel's fact vocabulary, but the kernel NEVER depends on it: all
# nondeterminism (the seeded PRNG) is quarantined here, so the analyzer kernel
# stays a pure function (`inv-determinism`).
[dependencies]
dorc-core = { path = "../core", version = "0.0.0" }
dorc-analysis = { path = "../analysis", version = "0.0.0" }

[dev-dependencies]
# The integration test drives the real pipeline with the modeled host as the probe.
dorc-syntax = { path = "../syntax", version = "0.0.0" }
dorc-oracle = { path = "../oracle", version = "0.0.0" }
dorc-plan = { path = "../plan", version = "0.0.0" }

[lints]
workspace = true
