[package]
name = "dorc-oracle"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# Lifts the fact-centric oracle contract (note 162 v2) out of plain sh into the
# analyzer-internal kind index. Pure + deterministic; consumes the parser.
[dependencies]
dorc-core = { path = "../core", version = "0.0.0" }
dorc-syntax = { path = "../syntax", version = "0.0.0" }

[lints]
workspace = true
